Fix to represent the file tree structure as list elements

--- a/website/docs/guides/custom-rule.mdx
+++ b/website/docs/guides/custom-rule.mdx
@@ -1,3 +1,5 @@
+import FileTree from '@site/src/components/FileTree';
+
 # Creating custom rule
 
 You can create a custom rule while referring to the [**API document**](/docs/api/), but it recommends you use the below command:
@@ -24,14 +26,16 @@ And choose the languages, either **TypeScript** or **JavaScript**. Then decide w
 
 And then there are the below files created:
 
-```
-📂 [cwd]
-└── 📂 [dir-name]
-    ├── 📄 index.ts # or index.js
-    └── 📂 rules
-        ├── 📄 [rule-name].ts # or [rule-name].js
-        └── 📄 [rule-name].spec.ts # or [rule-name].spec.js [Optional]
-```
+<FileTree>
+
+- 📂 [cwd]
+  - 📂 [dir-name]
+    - 📄 index.ts # or index.js
+    - 📂 rules
+      - 📄 [rule-name].ts # or [rule-name].js
+      - 📄 [rule-name].spec.ts # or [rule-name].spec.js [Optional]
+
+</FileTree>
 
 :::info
 The **test** code is written in [**Jest**](https://jestjs.io/) format. Please rewrite it you need.
@@ -80,17 +84,19 @@ And choose the languages, either **TypeScript** or **JavaScript**. Then decide w
 
 Eventually, there are the below files created:
 
-```
-📂 [cwd]
-├── 📄 README.md
-├── 📄 package.json
-├── 📄 tsconfig.json # Only when chose TypeScript
-└── 📂 src
-    ├── 📄 index.ts # or index.js
-    └── 📂 rules
-        ├── 📄 [rule-name].ts # or [rule-name].js
-        └── 📄 [rule-name].spec.ts # or [rule-name].spec.js [Optional]
-```
+<FileTree>
+
+- 📂 [cwd]
+  - 📄 README.md
+  - 📄 package.json
+  - 📄 tsconfig.json # Only when chose TypeScript
+  - 📂 src
+    - 📄 index.ts # or index.js
+    - 📂 rules
+      - 📄 [rule-name].ts # or [rule-name].js
+      - 📄 [rule-name].spec.ts # or [rule-name].spec.js [Optional]
+
+</FileTree>
 
 ## How to basic evaluate
 
