--- a/website/i18n/ja/docusaurus-plugin-content-docs/current/configuration/index.mdx
+++ b/website/i18n/ja/docusaurus-plugin-content-docs/current/configuration/index.mdx
@@ -1,3 +1,5 @@
+import FileTree from '@site/src/components/FileTree';
+
 # 設定
 
 ## 設定ファイル
@@ -6,17 +8,19 @@
 
 自動読み込みは、**ターゲットが存在するディレクトリから再帰的に検索していきます**。つまり、各ターゲットに最も近い設定ファイルを適用します。
 
-```
-📂 A
-├── 📄 .markuplintrc # ①
-└── 📂 B
-    ├── 📄 index.html # <- ① A/.markuplintrc が適用される
-    └── 📂 C
-        ├── 📄 index.html # <- ① A/.markuplintrc が適用される
-        └── 📂 D
-            ├── 📄 .markuplintrc # ②
-            └── 📄 index.html # <- ② A/B/C/D/.markuplintrc が適用される
-```
+<FileTree>
+
+- 📂 A
+  - 📄 .markuplintrc # ①
+  - 📂 B
+    - 📄 index.html # <- ① A/.markuplintrc が適用される
+    - 📂 C
+      - 📄 index.html # <- ① A/.markuplintrc が適用される
+      - 📂 D
+        - 📄 .markuplintrc # ②
+        - 📄 index.html # <- ② A/B/C/D/.markuplintrc が適用される
+
+</FileTree>
 
 :::note
 
