--- a/website/i18n/ja/docusaurus-plugin-content-docs/current/guides/custom-rule.mdx
+++ b/website/i18n/ja/docusaurus-plugin-content-docs/current/guides/custom-rule.mdx
@@ -1,3 +1,5 @@
+import FileTree from '@site/src/components/FileTree';
+
 # カスタムルールをつくる
 
 [APIドキュメント](/docs/api/)を参照しながらカスタムルールを作成できますが、コマンドを利用することで楽に作成ができます。
@@ -28,14 +30,16 @@ npx markuplint --create-rule
 
 すると、以下のファイルが作成されます。
 
-```
-📂 [cwd]
-└── 📂 [dir-name]
-    ├── 📄 index.ts # もしくは index.js
-    └── 📂 rules
-        ├── 📄 [rule-name].ts # もしくは [rule-name].js
-        └── 📄 [rule-name].spec.ts # もしくは [rule-name].spec.js （任意）
-```
+<FileTree>
+
+- 📂 [cwd]
+  - 📂 [dir-name]
+    - 📄 index.ts # もしくは index.js
+    - 📂 rules
+      - 📄 [rule-name].ts # もしくは [rule-name].js
+      - 📄 [rule-name].spec.ts # もしくは [rule-name].spec.js （任意）
+
+</FileTree>
 
 :::info
 
@@ -85,17 +89,19 @@ export default createPlugin({
 
 最終的に以下のファイルが作成されます。
 
-```
-📂 [cwd]
-├── 📄 README.md
-├── 📄 package.json
-├── 📄 tsconfig.json # TypeScriptを選択したときのみ
-└── 📂 src
-    ├── 📄 index.ts # もしくは index.js
-    └── 📂 rules
-        ├── 📄 [rule-name].ts # もしくは [rule-name].js
-        └── 📄 [rule-name].spec.ts # もしくは [rule-name].spec.js （任意）
-```
+<FileTree>
+
+- 📂 [cwd]
+  - 📄 README.md
+  - 📄 package.json
+  - 📄 tsconfig.json # TypeScriptを選択したときのみ
+  - 📂 src
+    - 📄 index.ts # もしくは index.js
+    - 📂 rules
+      - 📄 [rule-name].ts # もしくは [rule-name].js
+      - 📄 [rule-name].spec.ts # もしくは [rule-name].spec.js （任意）
+
+</FileTree>
 
 ## 基本的な評価方法
 
