Add a new sponsor.

--- a/website/community/index.mdx
+++ b/website/community/index.mdx
@@ -156,8 +156,15 @@ import Grid from '@site/src/components/Grid';
     name="yamanoku"
     github="https://github.com/yamanoku"
   />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/6581173"
+    name="miita"
+    github="https://github.com/mikimhk"
+  />
 </Grid>
 
+<!--
 ### Past sponsors
-
-- [miita](https://github.com/mikimhk)
+- [Name](https://github.com/[user])
+-->
