--- a/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
+++ b/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
@@ -156,8 +156,15 @@ import Grid from '@site/src/components/Grid';
     name="yamanoku"
     github="https://github.com/yamanoku"
   />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/6581173"
+    name="miita"
+    github="https://github.com/mikimhk"
+  />
 </Grid>
 
+<!--
 ### 過去にスポンサードいただいた方
-
-- [miita](https://github.com/mikimhk)
+- [名前](https://github.com/[user])
+-->
