Add a new contributor.

--- a/website/community/index.mdx
+++ b/website/community/index.mdx
@@ -98,6 +98,12 @@ import Grid from '@site/src/components/Grid';
   />
   <Profile
     mini
+    avatar="https://avatars.githubusercontent.com/u/9802070"
+    name="Bugfire"
+    github="https://github.com/Bugfire"
+  />
+  <Profile
+    mini
     avatar="https://avatars.githubusercontent.com/u/4138486"
     name="SaekiTominaga"
     github="https://github.com/SaekiTominaga"
