Fix to warn disallowed combination of ARIA prop/state with an element.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -148,6 +148,7 @@
 				"unit": { "type": "string" },
 				"uppercase": { "type": "string" },
 				"url who schema is an http(s) schema": { "type": "string" },
+				"use": { "type": "string" },
 				"username": { "type": "string" },
 				"value": { "type": "string" },
 				"void element": { "type": "string" },
@@ -184,6 +185,7 @@
 				"{0} greater than or equal to {1}": { "type": "string" },
 				"{0} has {1}": { "type": "string" },
 				"{0} if it has {1}": { "type": "string" },
+				"{0} if you {1} {2}": { "type": "string" },
 				"{0} includes {1}": { "type": "string" },
 				"{0} is {1:c}": { "type": "string" },
 				"{0} is {1}": { "type": "string" },
@@ -192,6 +194,7 @@
 				"{0} is not {1}": { "type": "string" },
 				"{0} is not allowed in {1} in this context": { "type": "string" },
 				"{0} is not allowed in {1} through the transparent model in this context": { "type": "string" },
+				"{0} is not recommended to {1}": { "type": "string" },
 				"{0} is unmatched with the below patterns: {1}": { "type": "string" },
 				"{0} less than {1}": { "type": "string" },
 				"{0} less than or equal to {1}": { "type": "string" },
@@ -217,6 +220,7 @@
 				"{0}. Or, {1}": { "type": "string" },
 				"\"{0}\" ID": { "type": "string" },
 				"a {0}": { "type": "string" },
+				"add {0}": { "type": "string" },
 				"allowed values are: {0}": { "type": "string" },
 				"also disallows {0} in this context": { "type": "string" },
 				"an {0}": { "type": "string" },
@@ -249,6 +253,7 @@
 				"need \"{0}\"": { "type": "string" },
 				"never {0} {1}": { "type": "string" },
 				"require {0}": { "type": "string" },
+				"remove {0}": { "type": "string" },
 				"the {0} format": { "type": "string" },
 				"the {0} part": { "type": "string" },
 				"the {0}": { "type": "string" },
