--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -136,6 +136,7 @@
 		"unit": "単位",
 		"uppercase": "大文字",
 		"url who schema is an http(s) schema": "HTTP(S)スキーマのURL",
+		"use": "使用",
 		"username": "ユーザー名",
 		"value": "値",
 		"void element": "空要素",
@@ -168,6 +169,7 @@
 		"{0} greater than or equal to {1}": "{1}以上の{0}",
 		"{0} has {1}": "{0}は{1}を持っています",
 		"{0} if it has {1}": "{1}を持つならば、{0}",
+		"{0} if you {1} {2}": "{1}する場合は、{0}",
 		"{0} includes {1}": "{0}は{1}を含んでいます",
 		"{0} is {1:c}": "{0}{1:c}",
 		"{0} is {1} but {2}": "{0}は{1}ですが、{2}",
@@ -176,6 +178,7 @@
 		"{0} is not {1}": "{0}は{1}ではありません",
 		"{0} is not allowed in {1} in this context": "このコンテキストでは、{1}に{0}を含めることはできません",
 		"{0} is not allowed in {1} through the transparent model in this context": "このコンテキストでは、トランスペアレントモデルを介して{1}に{0}を含めることはできません",
+		"{0} is not recommended to {1}": "{0}は{1}することは推奨されません",
 		"{0} is unmatched with the below patterns: {1}": "{0}は次のパターンにマッチしませんでした {1}",
 		"{0} less than {1}": "{1}より小さい{0}",
 		"{0} less than or equal to {1}": "{1}以下の{0}",
@@ -201,6 +204,7 @@
 		"{0}. Or, {1}": "{0}。または、{1}",
 		"\"{0}\" ID": "ID「{0}」",
 		"a {0}": "{0}",
+		"add {0}": "{0}を追加してください",
 		"allowed values are: {0}": "許可されている値は次のとおりです {0}",
 		"also disallows {0} in this context": "このコンテキスト内では{0}も許可しません",
 		"an {0}": "{0}",
@@ -230,6 +234,7 @@
 		"need {0}": "{0}が必要です",
 		"need \"{0}\"": "「{0}」が必要です",
 		"never {0} {1}": "{1}を{0}しないでください",
+		"remove {0}": "{0}を削除してください",
 		"require {0}": "{0}が必要です",
 		"the {0} format": "{0}形式",
 		"the {0} part": "{0}の部分",
