--- a/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
+++ b/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
@@ -86,6 +86,12 @@ import Grid from '@site/src/components/Grid';
   />
   <Profile
     mini
+    avatar="https://avatars.githubusercontent.com/u/20086673"
+    name="Munieru"
+    github="https://github.com/munierujp"
+  />
+  <Profile
+    mini
     avatar="https://avatars.githubusercontent.com/u/270905"
     name="Takeshi Kurosawa"
     github="https://github.com/takenspc"
