Add `allowAttrs` and `disallowAttrs` options, also change `attrs` option to deprecated.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -144,6 +144,7 @@
 				"time": { "type": "string" },
 				"token": { "type": "string" },
 				"top level": { "type": "string" },
+				"type": { "type": "string" },
 				"transparent model": { "type": "string" },
 				"unit": { "type": "string" },
 				"uppercase": { "type": "string" },
@@ -191,6 +192,8 @@
 				"{0} is {1}": { "type": "string" },
 				"{0} is {1} but {2}": { "type": "string" },
 				"{0} is disallowed": { "type": "string" },
+				"{0} is disallowed to accept the following values: {1}": { "type": "string" },
+				"{0} is matched with the below disallowed patterns: {1}": { "type": "string" },
 				"{0} is not {1}": { "type": "string" },
 				"{0} is not allowed in {1} in this context": { "type": "string" },
 				"{0} is not allowed in {1} through the transparent model in this context": { "type": "string" },
