--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -132,6 +132,7 @@
 		"time": "時間",
 		"token": "トークン",
 		"top level": "トップレベル",
+		"type": "型",
 		"transparent model": "トランスペアレントモデル",
 		"unit": "単位",
 		"uppercase": "大文字",
@@ -175,6 +176,8 @@
 		"{0} is {1} but {2}": "{0}は{1}ですが、{2}",
 		"{0} is {1}": "{0}は{1}です",
 		"{0} is disallowed": "{0}は禁止されています",
+		"{0} is disallowed to accept the following values: {1}": "{0}は次の値を受け取ることを禁止しています: {1}",
+		"{0} is matched with the below disallowed patterns: {1}": "{0}は次の許可しないパターンにマッチしました {1}",
 		"{0} is not {1}": "{0}は{1}ではありません",
 		"{0} is not allowed in {1} in this context": "このコンテキストでは、{1}に{0}を含めることはできません",
 		"{0} is not allowed in {1} through the transparent model in this context": "このコンテキストでは、トランスペアレントモデルを介して{1}に{0}を含めることはできません",
