--- a/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
+++ b/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
@@ -68,9 +68,21 @@ import Grid from '@site/src/components/Grid';
   />
   <Profile
     mini
+    avatar="https://avatars.githubusercontent.com/u/20086673"
+    name="Munieru"
+    github="https://github.com/munierujp"
+  />
+  <Profile
+    mini
     avatar="https://avatars.githubusercontent.com/u/2622837"
     name="petamoriken"
     github="https://github.com/petamoriken"
+  />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/30195678"
+    name="dqn"
+    github="https://github.com/dqn"
   />
   <Profile
     mini
@@ -86,9 +98,15 @@ import Grid from '@site/src/components/Grid';
   />
   <Profile
     mini
-    avatar="https://avatars.githubusercontent.com/u/20086673"
-    name="Munieru"
-    github="https://github.com/munierujp"
+    avatar="https://avatars.githubusercontent.com/u/79110363"
+    name="Risu"
+    github="https://github.com/risu729"
+  />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/1920783"
+    name="konomae"
+    github="https://github.com/konomae"
   />
   <Profile
     mini
