--- a/packages/@markuplint/i18n/package.json
+++ b/packages/@markuplint/i18n/package.json
@@ -1,13 +1,27 @@
 {
 	"name": "@markuplint/i18n",
-	"version": "3.9.0",
-	"description": "HTML parser for markuplint",
+	"version": "4.0.0-alpha.0",
+	"description": "Internationalization for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
 	"license": "MIT",
 	"private": false,
-	"main": "lib/index.js",
-	"types": "lib/index.d.ts",
+	"type": "module",
+	"exports": {
+		".": {
+			"import": "./lib/index.js",
+			"require": "./lib/cjs/index.js"
+		},
+		"./locales/en.json": {
+			"import": "./locales/en.json",
+			"require": "./locales/en.json"
+		},
+		"./locales/ja.json": {
+			"import": "./locales/ja.json",
+			"require": "./locales/ja.json"
+		}
+	},
+	"types": "./lib/index.d.ts",
 	"publishConfig": {
 		"access": "public"
 	},
@@ -15,7 +29,7 @@
 		"entryPoint": "./src/index.ts"
 	},
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc; tsc --module commonjs --outDir lib/cjs",
 		"clean": "tsc --build --clean"
 	}
 }
