Update contributors and personal sponsors.

--- a/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
+++ b/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
@@ -80,10 +80,11 @@ import Grid from '@site/src/components/Grid';
   />
   <Profile
     mini
-    avatar="https://avatars.githubusercontent.com/u/30195678"
-    name="dqn"
-    github="https://github.com/dqn"
+    avatar="https://avatars.githubusercontent.com/u/1996642"
+    name="Okuto Oyama"
+    github="https://github.com/yamanoku"
   />
+  <Profile mini avatar="https://avatars.githubusercontent.com/u/30195678" name="dqn" github="https://github.com/dqn" />
   <Profile
     mini
     avatar="https://avatars.githubusercontent.com/u/1212885"
@@ -95,6 +96,12 @@ import Grid from '@site/src/components/Grid';
     avatar="https://avatars.githubusercontent.com/u/8552636"
     name="saphryn"
     github="https://github.com/saphryn"
+  />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/12035578"
+    name="JJ"
+    github="https://github.com/konojunya"
   />
   <Profile
     mini
@@ -116,15 +123,27 @@ import Grid from '@site/src/components/Grid';
   />
   <Profile
     mini
-    avatar="https://avatars.githubusercontent.com/u/1996642"
-    name="yamanoku"
-    github="https://github.com/yamanoku"
-  />
-  <Profile
-    mini
     avatar="https://avatars.githubusercontent.com/u/1481270"
     name="undsoft"
     github="https://github.com/undsoft"
+  />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/2607019"
+    name="Noriyuki Shinpuku"
+    github="https://github.com/puku0x"
+  />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/7381843"
+    name="Kusaka Tsubasa"
+    github="https://github.com/n0h0"
+  />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/31643565"
+    name="Masato Nagashima"
+    github="https://github.com/nagashimam"
   />
   <Profile
     mini
@@ -189,7 +208,7 @@ import Grid from '@site/src/components/Grid';
   <Profile
     mini
     avatar="https://avatars.githubusercontent.com/u/1996642"
-    name="yamanoku"
+    name="Okuto Oyama"
     github="https://github.com/yamanoku"
   />
   <Profile
@@ -197,6 +216,18 @@ import Grid from '@site/src/components/Grid';
     avatar="https://avatars.githubusercontent.com/u/6581173"
     name="miita"
     github="https://github.com/mikimhk"
+  />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/111797"
+    name="Yasuo Fukuda"
+    github="https://github.com/sigwyg"
+  />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/802921"
+    name="Hideyuki Saito"
+    github="https://github.com/hideyukisaito"
   />
 </Grid>
 
