--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -268,6 +268,7 @@
 				"the list of {0}": { "type": "string" },
 				"the max number of elements required is {0}": { "type": "string" },
 				"the same {0} as {1}": { "type": "string" },
+				"the user agent will automatically use \"{0}\" instead": { "type": "string" },
 				"there is more content than it needs": { "type": "string" },
 				"unexpected {0}": { "type": "string" },
 				"unique {0}": { "type": "string" },
