--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -135,6 +135,7 @@
 		"transparent model": "トランスペアレントモデル",
 		"type": "型",
 		"unit": "単位",
+		"unknown": "不明",
 		"uppercase": "大文字",
 		"url who schema is an http(s) schema": "HTTP(S)スキーマのURL",
 		"use": "使用",
