--- a/packages/@markuplint/i18n/package.json
+++ b/packages/@markuplint/i18n/package.json
@@ -10,7 +10,10 @@
 	"types": "./cjs/index.d.ts",
 	"exports": {
 		".": {
-			"import": "./esm/index.js",
+			"import": {
+				"default": "./esm/index.mjs",
+				"types": "./esm/index.d.ts"
+			},
 			"require": "./cjs/index.js"
 		},
 		"./locales/en.json": {
@@ -29,7 +32,11 @@
 		"entryPoint": "./src/index.ts"
 	},
 	"scripts": {
-		"build": "tsc; tsc --module commonjs --outDir cjs",
+		"build": "yarn build:esm; yarn build:cjs; yarn rename:esm; yarn replaceext:esm",
+		"build:esm": "tsc",
+		"build:cjs": "tsc --module commonjs --outDir cjs",
+		"rename:esm": "find ./esm -type f -name \"*.js\" -exec sh -c 'mv \"$0\" \"${0%.js}.mjs\"' {} \\;",
+		"replaceext:esm": "find ./esm -type f -name \"*.mjs\" -exec sed -i '' 's/\\.js/\\.mjs/g' {} \\;",
 		"clean": "tsc --build --clean"
 	}
 }
