--- a/website/i18n/ja/docusaurus-plugin-content-docs-community/current/branding.mdx
+++ b/website/i18n/ja/docusaurus-plugin-content-docs-community/current/branding.mdx
@@ -31,9 +31,17 @@ import Color from '@site/src/components/Color';
 
 <Grid vertical>
   <LogoContainer src="/img/logo-horizontal.svg" caption="通常版（シンボル + ロゴタイプ）" mode="light" />
-  <LogoContainer src="/img/logo-horizontal.svg#d" caption="通常版（シンボル + ロゴタイプ） / ダークモード" mode="dark" />
+  <LogoContainer
+    src="/img/logo-horizontal.svg#d"
+    caption="通常版（シンボル + ロゴタイプ） / ダークモード"
+    mode="dark"
+  />
   <LogoContainer src="/img/logo-horizontal.svg#sl" caption="モノクロ版（シンボル + ロゴタイプ）" mode="light" />
-  <LogoContainer src="/img/logo-horizontal.svg#sd" caption="モノクロ版（シンボル + ロゴタイプ） / ダークモード" mode="dark" />
+  <LogoContainer
+    src="/img/logo-horizontal.svg#sd"
+    caption="モノクロ版（シンボル + ロゴタイプ） / ダークモード"
+    mode="dark"
+  />
 </Grid>
 
 ### 縦向き
@@ -42,7 +50,11 @@ import Color from '@site/src/components/Color';
   <LogoContainer src="/img/logo-vertical.svg" caption="通常版（シンボル + ロゴタイプ）" mode="light" />
   <LogoContainer src="/img/logo-vertical.svg#d" caption="通常版（シンボル + ロゴタイプ） / ダークモード" mode="dark" />
   <LogoContainer src="/img/logo-vertical.svg#sl" caption="モノクロ版（シンボル + ロゴタイプ）" mode="light" />
-  <LogoContainer src="/img/logo-vertical.svg#sd" caption="モノクロ版（シンボル + ロゴタイプ） / ダークモード" mode="dark" />
+  <LogoContainer
+    src="/img/logo-vertical.svg#sd"
+    caption="モノクロ版（シンボル + ロゴタイプ） / ダークモード"
+    mode="dark"
+  />
 </Grid>
 
 ### シンボルのみ
