Add personal supporters.

--- a/website/community/index.mdx
+++ b/website/community/index.mdx
@@ -229,6 +229,18 @@ import Grid from '@site/src/components/Grid';
     name="Hideyuki Saito"
     github="https://github.com/hideyukisaito"
   />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/3056064"
+    name="tamshow"
+    github="https://github.com/tamshow"
+  />
+  <Profile
+    mini
+    avatar="https://avatars.githubusercontent.com/u/91047157"
+    name="shamokit"
+    github="https://github.com/shamokit"
+  />
 </Grid>
 
 <!--
