Fix the message.

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -50,6 +50,7 @@
 				"c:obsolete": { "type": "string" },
 				"character": { "type": "string" },
 				"characters": { "type": "string" },
+				"child element": { "type": "string" },
 				"class name": { "type": "string" },
 				"code block": { "type": "string" },
 				"colon": { "type": "string" },
@@ -212,6 +213,7 @@
 				"{0} or more chars": { "type": "string" },
 				"{0} or more digits": { "type": "string" },
 				"{0} part of {1}": { "type": "string" },
+				"{0} requires {1}": { "type": "string" },
 				"{0} should {1}": { "type": "string" },
 				"{0} should associate with {1}": { "type": "string" },
 				"{0} should be {1}": { "type": "string" },
