--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -38,6 +38,7 @@
 		"c:obsolete": "は廃止されています",
 		"character": "文字",
 		"characters": "文字",
+		"child element": "子要素",
 		"class name": "クラス名",
 		"code block": "コードブロック",
 		"colon": "コロン",
@@ -196,6 +197,7 @@
 		"{0} or more chars": "{0}文字以上",
 		"{0} or more digits": "{0}桁以上",
 		"{0} part of {1}": "{1}の{0}の部分",
+		"{0} requires {1}": "{0}に{1}が必要です",
 		"{0} should {1}": "{0}は{1}したほうがよいです",
 		"{0} should associate with {1}": "{0}は{1}と関連付けたほうがよいです",
 		"{0} should be {1}": "{0}は{1}にしたほうがよいです",
