Add `no-consecutive-br` rule

--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -64,6 +64,7 @@
 		"double-quote": "ダブルクオート",
 		"duplicated": "重複",
 		"element": "要素",
+		"elements": "要素",
 		"empty string": "空文字",
 		"empty": "空",
 		"end tag": "終了タグ",
@@ -159,6 +160,7 @@
 		"{0} behaves the same as {1} if {2}": "{0}は{2}の場合、{1}と同じ振る舞いをします",
 		"{0} chars": "{0}文字",
 		"{0} contradicts {1}": "{0}は{1}と矛盾しています",
+		"{0} detected": "{0}が検出されました",
 		"{0} digits": "{0}桁",
 		"{0} disallows {1}": "{0}は{1}を許可しません",
 		"{0} does not exist": "{0}は存在しません",
@@ -208,6 +210,7 @@
 		"{0} to {1} digits": "{0}から{1}桁",
 		"{0} to {1}": "{0}から{1}",
 		"{0}. Or, {1}": "{0}。または、{1}",
+		"\"{0}\" {1}": "「{0}」{1}",
 		"\"{0}\" ID": "ID「{0}」",
 		"a {0}": "{0}",
 		"add {0}": "{0}を追加してください",
@@ -216,6 +219,7 @@
 		"an {0}": "{0}",
 		"cannot overwrite {0} to {1}": "{0}を{1}に上書きすることはできません",
 		"cannot overwrite {0}": "{0}を上書きすることはできません",
+		"consecutive {0}": "連続する{0}",
 		"did you mean \"{0}\"?": "「{0}」ではありませんか？",
 		"either {0}": "{0}のいずれか",
 		"extra {0}": "余計な{0}",
