--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -76,6 +76,7 @@
 				"double-quote": { "type": "string" },
 				"duplicated": { "type": "string" },
 				"element": { "type": "string" },
+				"elements": { "type": "string" },
 				"empty string": { "type": "string" },
 				"empty": { "type": "string" },
 				"end tag": { "type": "string" },
@@ -175,6 +176,7 @@
 				"{0} behaves the same as {1} if {2}": { "type": "string" },
 				"{0} chars": { "type": "string" },
 				"{0} contradicts {1}": { "type": "string" },
+				"{0} detected": { "type": "string" },
 				"{0} digits": { "type": "string" },
 				"{0} disallows {1}": { "type": "string" },
 				"{0} does not exist": { "type": "string" },
@@ -224,6 +226,7 @@
 				"{0} to {1} digits": { "type": "string" },
 				"{0} to {1}": { "type": "string" },
 				"{0}. Or, {1}": { "type": "string" },
+				"\"{0}\" {1}": { "type": "string" },
 				"\"{0}\" ID": { "type": "string" },
 				"a {0}": { "type": "string" },
 				"add {0}": { "type": "string" },
@@ -232,6 +235,7 @@
 				"an {0}": { "type": "string" },
 				"cannot overwrite {0} to {1}": { "type": "string" },
 				"cannot overwrite {0}": { "type": "string" },
+				"consecutive {0}": { "type": "string" },
 				"did you mean \"{0}\"?": { "type": "string" },
 				"either {0}": { "type": "string" },
 				"extra {0}": { "type": "string" },
