--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -93,6 +93,7 @@
 		"mime type": "MIMEタイプ",
 		"minute": "分",
 		"month": "月",
+		"name": "名前",
 		"newline": "改行",
 		"node": "ノード",
 		"non-negative integer": "正の整数",
