Add `neighbor-popovers` rule

--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -107,6 +107,7 @@
 		"one": "1",
 		"origin": "オリジン",
 		"password": "パスワード",
+		"perceptible nodes": "知覚要素",
 		"placeholder label option": "プレースホルダーラベルオプション",
 		"property name": "プロパティ名",
 		"query": "クエリ",
@@ -124,6 +125,7 @@
 		"tag name": "タグ名",
 		"tag names": "タグ名",
 		"tag": "タグ",
+		"target": "ターゲット",
 		"text node": "テキストノード",
 		"the abstract role": "抽象ロール",
 		"the content of the list": "リストの内容",
@@ -136,6 +138,7 @@
 		"token": "トークン",
 		"top level": "トップレベル",
 		"transparent model": "トランスペアレントモデル",
+		"trigger": "トリガー",
 		"type": "型",
 		"unit": "単位",
 		"unknown": "不明",
@@ -221,6 +224,8 @@
 		"cannot overwrite {0} to {1}": "{0}を{1}に上書きすることはできません",
 		"cannot overwrite {0}": "{0}を上書きすることはできません",
 		"consecutive {0}": "連続する{0}",
+		"corresponding {0}": "対応する{0}",
+		"detected {0} between {1} and {2}": "{1}と{2}の間で{0}が検出されました",
 		"did you mean \"{0}\"?": "「{0}」ではありませんか？",
 		"either {0}": "{0}のいずれか",
 		"extra {0}": "余計な{0}",
