--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -119,6 +119,7 @@
 				"one": { "type": "string" },
 				"origin": { "type": "string" },
 				"password": { "type": "string" },
+				"perceptible nodes": { "type": "string" },
 				"placeholder label option": { "type": "string" },
 				"property name": { "type": "string" },
 				"query": { "type": "string" },
@@ -136,6 +137,7 @@
 				"tag name": { "type": "string" },
 				"tag names": { "type": "string" },
 				"tag": { "type": "string" },
+				"target": { "type": "string" },
 				"text node": { "type": "string" },
 				"the abstract role": { "type": "string" },
 				"the content of the list": { "type": "string" },
@@ -148,6 +150,7 @@
 				"token": { "type": "string" },
 				"top level": { "type": "string" },
 				"transparent model": { "type": "string" },
+				"trigger": { "type": "string" },
 				"type": { "type": "string" },
 				"unit": { "type": "string" },
 				"unknown": { "type": "string" },
@@ -237,6 +240,8 @@
 				"cannot overwrite {0} to {1}": { "type": "string" },
 				"cannot overwrite {0}": { "type": "string" },
 				"consecutive {0}": { "type": "string" },
+				"corresponding {0}": { "type": "string" },
+				"detected {0} between {1} and {2}": { "type": "string" },
 				"did you mean \"{0}\"?": { "type": "string" },
 				"either {0}": { "type": "string" },
 				"extra {0}": { "type": "string" },
