--- a/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
+++ b/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
@@ -231,19 +231,12 @@ import Grid from '@site/src/components/Grid';
   />
   <Profile
     mini
-    avatar="https://avatars.githubusercontent.com/u/3056064"
-    name="tamshow"
-    github="https://github.com/tamshow"
-  />
-  <Profile
-    mini
     avatar="https://avatars.githubusercontent.com/u/91047157"
     name="shamokit"
     github="https://github.com/shamokit"
   />
 </Grid>
 
-<!--
 ### 過去にスポンサードいただいた方
-- [名前](https://github.com/[user])
--->
+
+- [tamshow](https://github.com/tamshow)
