--- a/website/community/index.mdx
+++ b/website/community/index.mdx
@@ -196,6 +196,18 @@ import Grid from '@site/src/components/Grid';
   />
 </Grid>
 
+## Corprate sponsors
+
+<Grid>
+  <Profile
+    avatar="https://avatars.githubusercontent.com/u/1551649"
+    name="Velc Inc."
+    website="https://www.velc.co.jp"
+    github="https://github.com/Velc"
+    twitter="theboardjp"
+  />
+</Grid>
+
 ## Personal sponsors
 
 <Grid colWidth="10em">
