Add a corporate sponsor section to Japanese page

--- a/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
+++ b/website/i18n/ja/docusaurus-plugin-content-docs-community/current/index.mdx
@@ -196,6 +196,18 @@ import Grid from '@site/src/components/Grid';
   />
 </Grid>
 
+## 企業スポンサー
+
+<Grid>
+  <Profile
+    avatar="https://avatars.githubusercontent.com/u/1551649"
+    name="Velc Inc."
+    website="https://www.velc.co.jp"
+    github="https://github.com/Velc"
+    twitter="theboardjp"
+  />
+</Grid>
+
 ## 個人スポンサー
 
 <Grid colWidth="10em">
