Fix false positives and messages for ARIA state attribute warnings

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -122,6 +122,7 @@
 				"perceptible nodes": { "type": "string" },
 				"placeholder label option": { "type": "string" },
 				"property name": { "type": "string" },
+				"property": { "type": "string" },
 				"query": { "type": "string" },
 				"quote": { "type": "string" },
 				"regular expression": { "type": "string" },
@@ -134,6 +135,7 @@
 				"space-separated list": { "type": "string" },
 				"space": { "type": "string" },
 				"spaces": { "type": "string" },
+				"state": { "type": "string" },
 				"tag name": { "type": "string" },
 				"tag names": { "type": "string" },
 				"tag": { "type": "string" },
@@ -237,6 +239,7 @@
 				"allowed values are: {0}": { "type": "string" },
 				"also disallows {0} in this context": { "type": "string" },
 				"an {0}": { "type": "string" },
+				"as its {0} is already provided by {1}": { "type": "string" },
 				"cannot overwrite {0} to {1}": { "type": "string" },
 				"cannot overwrite {0}": { "type": "string" },
 				"consecutive {0}": { "type": "string" },
