--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -110,6 +110,7 @@
 		"perceptible nodes": "知覚要素",
 		"placeholder label option": "プレースホルダーラベルオプション",
 		"property name": "プロパティ名",
+		"property": "プロパティ",
 		"query": "クエリ",
 		"quote": "クオート",
 		"regular expression": "正規表現",
@@ -122,6 +123,7 @@
 		"space-separated list": "空白区切りのリスト",
 		"space": "空白",
 		"spaces": "空白",
+		"state": "ステート",
 		"tag name": "タグ名",
 		"tag names": "タグ名",
 		"tag": "タグ",
@@ -221,6 +223,7 @@
 		"allowed values are: {0}": "許可されている値は次のとおりです {0}",
 		"also disallows {0} in this context": "このコンテキスト内では{0}も許可しません",
 		"an {0}": "{0}",
+		"as its {0} is already provided by {1}": "その{0}は{1}によってすでに提供されています",
 		"cannot overwrite {0} to {1}": "{0}を{1}に上書きすることはできません",
 		"cannot overwrite {0}": "{0}を上書きすることはできません",
 		"consecutive {0}": "連続する{0}",
